# kmersutra

./: LICENSE  README.md  V0_26_RELEASE_NOTES.txt  V0_29_RELEASE_NOTES.txt  V0_30_RELEASE_NOTES.txt  V0_31_RELEASE_NOTES.txt  V0_32_1_NOSE2_REPAIR_NOTES.txt  V0_32_RELEASE_NOTES.txt  V0_33_RELEASE_NOTES.txt  V0_34_RELEASE_NOTES.txt  V0_35_RELEASE_NOTES.txt  V0_36_RELEASE_NOTES.txt  example_hierarchical_module_manifest.tsv  prepare_submit_kmersutra_v015_conservative_comparable_array.sh  pyproject.toml  run_kmersutra_build_global_candidate_v019_tmpdir.sh  run_kmersutra_build_global_candidate_v020_tmpdir.sh  run_kmersutra_build_global_candidate_v021_tmpdir.sh  run_kmersutra_build_global_candidate_v023_tmpdir.sh  run_kmersutra_build_global_candidate_v027_tmpdir.sh  run_kmersutra_build_global_candidate_v028_1_tmpdir.sh  run_kmersutra_build_global_candidate_v028_tmpdir.sh  run_kmersutra_build_global_candidate_v032_tmpdir.sh  run_kmersutra_build_global_candidate_v034_tmpdir.sh  run_kmersutra_build_global_candidate_v036_tmpdir.sh  run_kmersutra_comparable_summary.sh  run_kmersutra_v015_conservative_array_tmpdir.sh  summarise_kmersutra_comparable_benchmark.py  test_results_v0_18_0.txt  test_results_v0_21_0.txt  test_results_v0_22_0.txt  test_results_v0_23_0.txt  test_results_v0_25_0.txt  test_results_v0_27_0.txt  test_results_v0_28_0.txt  test_results_v0_28_1.txt  test_results_v0_29_0.txt  test_results_v0_30_0.txt  test_results_v0_31_0.txt  test_results_v0_32_0.txt  (+6 more)
examples/: example_taxid_plan.tsv  outgroup.fna  species_a.fna  species_b.fna
kmersutra/: __init__.py  ai_calibration.py  assembly_stats.py  benchmark_postprocess.py  benchmark_reporting.py  build_panel.py  call_consolidation.py  config.py  fasta.py  features.py  global_candidate_evidence.py  hierarchical.py  io.py  kmers.py  lca_reporting.py  logging_utils.py  marker_selection.py  ml.py  module_export.py  ncbi.py  ncbi_genomes.py  panel_cache.py  panel_merge.py  panel_parquet.py  reporting.py  run_summary.py  screen_reads.py  summarise_hits.py  table_io.py  table_parquet.py  taxonomy.py  thresholds.py
kmersutra/cli/: __init__.py  benchmark_postprocess.py  build_call_training_table.py  build_clade_kmer_panel.py  download_genomes_for_kmersutra.py  extract_ml_features.py  merge_modules.py  predict_classifier.py  screen_reads_for_clade_kmers.py  summarise_kmersutra_spikeins.py  summarise_lca.py  summarise_spikein_run.py  train_call_calibrator.py  train_classifier.py  validate_panel.py
kmersutra_v027_work/: V0_27_RELEASE_NOTES.txt  run_kmersutra_build_global_candidate_v022_tmpdir.sh  test_results_v0_17_0.txt  test_results_v0_19_0.txt  test_results_v0_20_0.txt
run_script/: prepare_submit_kmersutra_v017_lineage_aware_comparable_array.sh  run_kmersutra_v017_lineage_aware_array_tmpdir.sh
scripts/: build_clade_kmer_panel.py  download_genomes_for_kmersutra.py  download_ncbi_taxon_genomes.py  extract_ml_features.py  predict_kmersutra_classifier.py  screen_reads_for_clade_kmers.py  summarise_kmersutra_spikein_runs.py  train_kmersutra_classifier.py
summary/: README_kmersutra_comparable_summary.md  run_kmersutra_comparable_summary.sh  summarise_kmersutra_comparable_benchmark.py  summarise_kmersutra_spikein_runs.py  test_results.txt
tests/: __init__.py  test_ai_calibration.py  test_all_candidate_evidence.py  test_assembly_stats.py  test_benchmark_postprocess.py  test_benchmark_reporting.py  test_build_cli_target_evidence.py  test_build_panel.py  test_call_consolidation.py  test_cli.py  test_compact_build.py  test_comparable_summary_neighbour_reporting.py  test_config.py  test_end_to_end.py  test_fasta.py  test_global_candidate_evidence.py  test_hierarchical.py  test_io.py  test_kmers.py  test_lca_reporting.py  test_lineage_interpretation.py  test_marker_selection.py  test_module_export.py  test_ncbi_genomes.py  test_panel_merge.py  test_panel_parquet.py  test_profiling.py  test_progress_logging.py  test_resource_monitor.py  test_screen_cli_outputs.py  test_screen_reads.py  test_summarise_hits.py  test_table_io.py  test_table_parquet.py  test_target_evidence.py  test_taxonomy.py  test_thresholds.py
(+35 files in other folders)
