[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kmersutra"
version = "0.3.0"
description = "Outgroup-aware k-mer framework for clade and species-resolved metagenomic detection"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
kmersutra-build-panel = "kmersutra.cli.build_clade_kmer_panel:main"
kmersutra-screen = "kmersutra.cli.screen_reads_for_clade_kmers:main"
kmersutra-download-ncbi = "kmersutra.cli.download_ncbi_taxon_genomes:main"

[project.optional-dependencies]
dev = ["nose2"]
reporting = ["matplotlib", "openpyxl"]
interactive = ["plotly"]
stats = ["scipy"]
parquet = ["pyarrow"]
ncbi = ["requests", "biopython"]
all = ["nose2", "matplotlib", "openpyxl", "plotly", "scipy", "pyarrow", "requests", "biopython"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kmersutra*"]

[tool.nose2]
start-dir = "tests"
