[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kmersutra"
version = "0.35.0"
description = "Outgroup-aware k-mer framework for clade and species-resolved metagenomic detection"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
kmersutra-build-panel = "kmersutra.cli.build_clade_kmer_panel:main"
kmersutra-screen = "kmersutra.cli.screen_reads_for_clade_kmers:main"
kmersutra-download-ncbi = "kmersutra.cli.download_ncbi_taxon_genomes:main"
kmersutra-download-genomes = "kmersutra.cli.download_genomes_for_kmersutra:main"
kmersutra-extract-features = "kmersutra.cli.extract_ml_features:main"
kmersutra-train-classifier = "kmersutra.cli.train_classifier:main"
kmersutra-predict = "kmersutra.cli.predict_classifier:main"
kmersutra-build-call-training = "kmersutra.cli.build_call_training_table:main"
kmersutra-train-call-calibrator = "kmersutra.cli.train_call_calibrator:main"
kmersutra-summarise-run = "kmersutra.cli.summarise_spikein_run:main"
kmersutra-summarise-lca = "kmersutra.cli.summarise_lca:main"
kmersutra-benchmark-postprocess = "kmersutra.cli.benchmark_postprocess:main"
kmersutra-summarise-spikeins = "kmersutra.cli.summarise_kmersutra_spikeins:main"
kmersutra-download-taxonomy = "kmersutra.cli.download_taxonomy:main"
kmersutra-merge-panels = "kmersutra.cli.merge_panels:main"
kmersutra-merge-modules = "kmersutra.cli.merge_modules:main"
kmersutra-validate-panel = "kmersutra.cli.validate_panel:main"

[project.optional-dependencies]
dev = ["nose2"]
reporting = ["matplotlib", "openpyxl"]
interactive = ["plotly"]
stats = ["scipy"]
ml = ["scikit-learn", "joblib"]
parquet = ["pyarrow"]
ncbi = ["requests", "biopython"]
all = ["nose2", "matplotlib", "openpyxl", "plotly", "scipy", "pyarrow", "requests", "biopython", "scikit-learn", "joblib"]

[tool.setuptools.packages.find]
where = ["."]
include = ["kmersutra*"]

[tool.nose2]
start-dir = "tests"
